objects/SMAX_PS_Complaint__c.object
<CustomObject>
    <label>Complaint</label>
    <nameField>
        <displayFormat>CMP-{0000000000}</displayFormat>
        <label>Complaint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Batch__c</fullName>
        <description>Batch Number</description>
        <inlineHelpText>Batch Number</inlineHelpText>
        <label>Batch Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Plant__c</fullName>
        <description>Plant</description>
        <inlineHelpText>Plant</inlineHelpText>
        <label>Plant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CapaNumber__c</fullName>
        <description>CAPA Number</description>
        <inlineHelpText>CAPA Number</inlineHelpText>
        <label>CAPA Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <description>Last Transaction Number</description>
        <inlineHelpText>Last Transaction Number</inlineHelpText>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_StatusCode__c</fullName>
        <label>Status Code</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician/Equipment</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ModelNumber__c</fullName>
        <description>Model Number</description>
        <inlineHelpText>Model Number</inlineHelpText>
        <label>Model Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProductLine__c</fullName>
        <description>Product Line</description>
        <inlineHelpText>Product Line</inlineHelpText>
        <label>Product Line</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ContractType__c</fullName>
        <description>Contract Type</description>
        <inlineHelpText>Contract Type</inlineHelpText>
        <label>Contract Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CreationDate__c</fullName>
        <description>Complaint Creation Date</description>
        <inlineHelpText>Complaint Creation Date</inlineHelpText>
        <label>Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CustomerName__c</fullName>
        <description>Customer Name</description>
        <inlineHelpText>Customer Name</inlineHelpText>
        <label>Customer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SerialNumber__c</fullName>
        <description>Serial Number</description>
        <inlineHelpText>Serial Number</inlineHelpText>
        <label>Serial Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CustomerEmail__c</fullName>
        <description>Customer Email Address</description>
        <inlineHelpText>Customer Email Address</inlineHelpText>
        <label>Customer Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CustomerPhone__c</fullName>
        <description>Customer Phone Number</description>
        <inlineHelpText>Customer Phone Number</inlineHelpText>
        <label>Customer Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ComplaintOwner__c</fullName>
        <description>Complaint Owner</description>
        <inlineHelpText>Complaint Owner</inlineHelpText>
        <label>Complaint Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ComplaintNumber__c</fullName>
        <externalId>true</externalId>
        <label>Complaint Number</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_CompletedTxnNum__c</fullName>
        <description>Completed Transaction Number</description>
        <inlineHelpText>Completed Transaction Number</inlineHelpText>
        <label>Completed Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CustomerAddress__c</fullName>
        <description>Customer Address</description>
        <inlineHelpText>Customer Address</inlineHelpText>
        <label>Customer Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastChangedDate__c</fullName>
        <description>Last Changed Date</description>
        <inlineHelpText>Last Changed Date</inlineHelpText>
        <label>Last Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ShipToPartyName__c</fullName>
        <description>Ship To Party Name</description>
        <inlineHelpText>Ship To Party Name</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldToPartyName__c</fullName>
        <description>Sold To Party Name</description>
        <inlineHelpText>Sold To Party Name</inlineHelpText>
        <label>Sold To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_F1CreationMethod__c</fullName>
        <description>F1 Creation Method</description>
        <inlineHelpText>F1 Creation Method</inlineHelpText>
        <label>F1 Creation Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InstalledProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceOrderType__c</fullName>
        <description>Service Order Type</description>
        <inlineHelpText>Service Order Type</inlineHelpText>
        <label>Order Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ComplaintLongText__c</fullName>
        <description>Long Text</description>
        <inlineHelpText>Long Text</inlineHelpText>
        <label>Long Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CreatedByUsername__c</fullName>
        <description>Created By Username</description>
        <inlineHelpText>Created By Username</inlineHelpText>
        <label>Created By Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_StatusDescription__c</fullName>
        <label>Status Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ComplaintShortText__c</fullName>
        <description>Short Text</description>
        <inlineHelpText>Short Text</inlineHelpText>
        <label>Short Text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EndCustomerCountry__c</fullName>
        <description>End Customer Country</description>
        <inlineHelpText>End Customer Country</inlineHelpText>
        <label>End Customer Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CRM_ServiceOrderNum__c</fullName>
        <label>CRM Service Order Num</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastChangedUsername__c</fullName>
        <description>Last Changed By Username</description>
        <inlineHelpText>Last Changed By Username</inlineHelpText>
        <label>Last Changed By Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceCreationDate__c</fullName>
        <description>Service Created Date</description>
        <inlineHelpText>Service Created Date</inlineHelpText>
        <label>Service Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceOrderLastUpdated__c</fullName>
        <description>Service Order Last Updated Date</description>
        <inlineHelpText>Service Order Last Updated Date</inlineHelpText>
        <label>Service Order Last Updated Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>